create 3m test building

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,3 +25,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/GameJamKit")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/GameJamKit")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=True
+
